# git-rs

./: Cargo.toml
src/: app.rs  lib.rs  main.rs  table_sample.rs
src/cli/: app.rs
src/cli/app/: component.rs  controller.rs  stateful_table.rs
src/cli/app/component/: branch_deletion_confirmation.rs  branch_list.rs  branch_table.rs  selected_branch_list.rs
src/cli/app/controller/: branch_deletion_confirmation_controller.rs  branch_list_controller.rs
src/cli/app/view/: branch_table.rs
src/domain/: entity.rs
src/domain/entity/: branch.rs
src/domain/repository/: branch.rs
src/infrastracture/: repository.rs
src/infrastracture/repository/: branch.rs
src/usecase/: branch.rs
src/usecase/branch/: delete.rs  get_all.rs
