[package]
name = "git-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "*"
crossterm = "*"
git2 = "*"
anyhow = "*"
strum = "*"
strum_macros = "*"

[dev-dependencies]
mockall = "*"
pretty_assertions = "*"
assert_matches = "*"
rstest = "*"
